# calsim-dash-widgets

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
calsim_dash_widgets/: __init__.py  __main__.py  aggregation.py  alerts.py  assets.py  branding.py  cards.py  plots.py  plotting.py  timeseries.py
cdw_examples/: __main__.py  data.py
cdw_examples/pages/: alerts.py  cards.py  home.py
conda.recipe/: conda_build_config.yaml  meta.yaml
tests/: conftest.py
